# medical-triage-agent-ai-poc

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  mlflow.db  requirements.txt
backend/: .dockerignore  .trivyignore  Dockerfile  Dockerfile.hf  Dockerfile_old  __init__.py  pyproject.toml  requirements-ci.txt  requirements.txt  requirements_old.txt
backend/app/: __init__.py  main.py
backend/app/anonymization/: README.md  __init__.py  audit_logger.py  pii_patterns.py  presidio_analyzer.py  presidio_analyzer_old.py  presidio_anonymizer.py  spacy_setup.py  validation.py
backend/app/anonymization/examples/: sample_medical_note.txt
backend/app/api/: dependencies.py  router.py  schemas.py
backend/app/api/dependencies/: inference.py  modal.py
backend/app/api/middleware/: auth_middleware.py  logging_middleware.py  security_middleware.py
backend/app/api/routes/: audit.py  auth.py  health.py  inference.py  inference_old.py  monitoring.py  triage.py  triage_old.py
backend/app/core/: config.py  rate_limiter.py  security.py
backend/app/datasets/: README.md
backend/app/datasets/metadata/: dataset_card.md  licenses.md
backend/app/datasets/raw/: README.md  dataset_registry.py  download_datasets.py  schemas.py  standardize_datasets.py  standardize_datasets_old.py
backend/app/deployment/huggingface/: dataset_push.py  hf_space_backend.env  hf_space_runtime.py  model_push.py
backend/app/deployment/modal/: modal_deploy.py  modal_endpoint.py  modal_gpu_config.py  modal_image.py
backend/app/docs/: 1-architecture.md  2-rgpd.md  3-training.md  4-deployment.md  5-api.md  6-final_report.md  6-modal.md  7-final_report_étape 3.md  8-final_report.md
backend/app/llm/inference/: generate.py  prompt_builder.py  triage_engine.py  triage_engine_old.py  vllm_engine.py
backend/app/llm/loaders/: model_loader.py  quantization_loader.py  tokenizer_loader.py
backend/app/llm/modal/: modal_client.py  modal_exceptions.py  modal_inference.py  modal_schema.py
backend/app/monitoring/: alerting.py  alerting_old.py  audit_store.py  gpu_monitor.py  gpu_monitor_old.py  inference_monitor.py  latency_monitor.py  modal_monitor.py  request_tracker.py
backend/app/tests/: test_coverage.py
backend/app/tests/integration/: conftest.py  test_frontend_backend.py  test_frontend_backend_old.py  test_inference_api.py  test_inference_api_old.py  test_pipeline.py  test_pipeline_old.py
backend/app/tests/modal/: test_modal_client.py  test_modal_endpoint.py  test_modal_failover.py
backend/app/tests/performance/: test_audit_trail.py  test_latency.py  test_robustness.py
backend/app/tests/security/: conftest.py  test_access_control.py  test_endpoints.py  test_injections.py
backend/app/tests/unit/: test_anonymization.py  test_api.py  test_loaders.py
backend/app/training/: __init__.py
backend/app/training/colab/: colab_checkpoint_sync.py  colab_checkpoint_sync_old_01.py  colab_checkpoint_sync_old_02.py  colab_checkpoint_sync_old_03.py  colab_checkpoint_sync_old_04.py  colab_environment.py  colab_environment_old_01.py  colab_gpu_detector.py  colab_gpu_detector_old_01.py  colab_hf_login.py  training_pipeline_colab.ipynb  training_pipeline_colab_old_02.ipynb
backend/app/training/dpo/: __init__.py  dpo_config.yaml  dpo_config_validation.yaml  dpo_config_validation_old_01.yaml  dpo_config_validation_old_02.yaml  dpo_config_validation_old_03.yaml  dpo_schema.py  preference_builder.py  preference_builder_old_02.py  preference_builder_old_03.py  preference_builder_old_04.py  train_dpo.py  train_dpo_old.py  train_dpo_old_02.py  train_dpo_old_03.py  train_dpo_old_04.py  train_dpo_old_05.py  train_dpo_old_06.py  train_dpo_old_07.py  train_dpo_old_08.py  train_dpo_old_10.py  train_dpo_old_11.py  train_dpo_old_12.py
backend/app/training/evaluation/: clinical_eval_runner.py  clinical_eval_runner_old_03.py  clinical_eval_runner_old_04.py  clinical_eval_runner_old_05.py  clinical_metrics.py  clinical_thresholds.py  clinical_thresholds_old_01.py  dangerous_recommendation_detector.py  dangerous_recommendation_detectorold_01.py  evaluation_config.yaml  evaluation_config_old_01.yaml  evaluation_report.py  evaluation_report_old_01.py  hallucination_detector.py  safety_evaluator.py  (+1 more)
backend/utils/: hf_utils.py
(+93 files in other folders)
