# ==========================================================
# medical-triage-agent-ai-poc/backend/pyproject.toml
# ==========================================================

[project]
name = "medical-triage-backend"
version = "0.1.0"
description = "Backend AI Medical Triage POC"

authors = [
    { name = "AI Engineer Student" }
]

requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",

    "torch",
    "transformers",
    "accelerate",
    "datasets",
    "sentencepiece",
    "safetensors",
    "huggingface_hub",

    "peft",
    "trl",
    "vllm",

    "modal",
    "httpx",
    "requests",

    "numpy",
    "pandas",
    "scikit-learn",

    "spacy",
    "faker>=25.0.0",

    "presidio-analyzer",
    "presidio-anonymizer",

    "mlflow",
    "wandb",
    "prometheus-client",

    "loguru",

    "python-jose[cryptography]",
    "passlib[bcrypt]"
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=6.0.0",
    "black",
    "flake8",
    "isort",
    "mypy",
    "jupyterlab",
    "ipykernel"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

testpaths = [
    "app/tests"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.flake8]
max-line-length = 88

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".pytest_cache",
    ".mypy_cache"
]

[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]

build-backend = "setuptools.build_meta"
