# ==========================================================
# medical-triage-agent-ai-poc/backend/pyproject.toml
# ==========================================================

[project]
name = "medical-triage-backend"
version = "0.1.0"
description = "Backend AI Medical Triage POC"

authors = [
    { name = "AI Engineer Student" }
]

requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",

    "torch",
    "transformers",
    "accelerate",
    "datasets",
    "sentencepiece",
    "safetensors",
    "huggingface_hub",

    "peft",
    "trl",
    "vllm>=0.22.0",

    # "modal",
    "httpx",
    "requests",

    "numpy",
    "pandas",
    "scikit-learn",

    "spacy",
    "faker>=25.0.0",

    "presidio-analyzer",
    "presidio-anonymizer",

    "wandb>=0.27.0",

    "loguru",

    "python-jose[cryptography]",
    "cryptography>=48.0.1",
    "passlib[bcrypt]"
]

[project.optional-dependencies]

dev = [
    "pytest==9.1.1",
    "pytest-asyncio",
    "pytest-cov>=6.0.0",
    "black==26.5.1",
    "flake8",
    "isort",
    "mypy",
    "jupyterlab",
    "ipykernel"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

testpaths = [
    "app/tests"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.flake8]
max-line-length = 88

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".pytest_cache",
    ".mypy_cache"
]

[tool.ruff]
extend-exclude = ["app/training/colab/training_pipeline_colab.ipynb"]

[build-system]
requires = [
    "setuptools>=68",
    "wheel>=0.46.2"
]

build-backend = "setuptools.build_meta"
